--- a/src2/App.css
+++ b/src2/App.css
@@ -28,6 +28,32 @@
   color: #61dafb;
 }
 
+button {
+  background-color: #4CAF50; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 1px solid #555;
+    outline: none;
+}
+
+.greenbox {
+  div {
+    border: 2px solid green;
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
